--- a/config/boards/shields/enki42/enki42_dongle.conf
+++ b/config/boards/shields/enki42/enki42_dongle.conf
@@ -1,5 +1,8 @@
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=2
+CONFIG_NFCT_PINS_AS_GPIOS=y
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_SLEEP=n
 
 CONFIG_ZMK_SLEEP=n
 # CONFIG_PM_DEVICE=n
