--- a/config/boards/shields/enki42/enki42.conf
+++ b/config/boards/shields/enki42/enki42.conf
@@ -11,6 +11,8 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_EXT_POWER=y
 
 
-CONFIG_ZMK_KEYBOARD_NAME="Enki42"
+CONFIG_ZMK_KEYBOARD_NAME="Chipper Dongle"
 
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_NFCT_PINS_AS_GPIOS=y
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
