--- a/config/boards/shields/enki42/enki42_left.conf
+++ b/config/boards/shields/enki42/enki42_left.conf
@@ -4,3 +4,6 @@ CONFIG_ZMK_SLEEP=y
 CONFIG_PM_DEVICE=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_EXT_POWER=y
+CONFIG_NFCT_PINS_AS_GPIOS=y
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
