--- a/build.yaml
+++ b/build.yaml
@@ -10,5 +10,5 @@ include:
     shield: enki42_left
   - board: nice_nano_v2
     shield: enki42_right
-  - board: seeeduino_xiao_ble
+  - board: nice_nano
     shield: enki42_dongle
