--- a/build.yaml
+++ b/build.yaml
@@ -12,3 +12,7 @@ include:
     shield: enki42_right
   - board: seeeduino_xiao_ble
     shield: enki42_dongle
+  - board: nice_nano_v2
+    shield: settings_reset
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
